# mlops_sbt

./: CMakeLists.txt
bonus_hw/: README.md  docker-compose.yml
bonus_hw/client/: Dockerfile  tester.py
bonus_hw/server/: Dockerfile  build_repo.py  model.py
hw1/: Dockerfile  pyproject.toml
hw1/src/: main.cpp
hw1/tensor_ops/: __init__.py
hw2/: .gitignore  Dockerfile  README.md  model_utils.py  requirements.txt  run_12.sh  run_34.sh  setup_repo.py  triton_utils.py
tests/: test_mac.py
