[build-system]
requires = ["scikit-build-core>=0.5", "pybind11", "setuptools"]
build-backend = "scikit_build_core.build"

[project]
name = "tensor_ops"
version = "0.1.0"
description = "Fast C++ Tensor MAC operation binding"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.verbose = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tensor_ops*"]
